examples/test/testpolicy16415.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16415
  namespace: namespace117
spec:
  podSelector:
    matchLabels:
      key14: value23
      key12: value32
      key37: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value10
          key25: value11
          key47: value15
      podSelector:
        matchLabels:
          key41: value21
